<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lesson11</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz_menu">QuizMenuActivity</string>
    <string name="title_activity_quiz_help">QuizHelpActivity</string>
    <string name="title_activity_quiz_scores">QuizScoresActivity</string>
    <string name="title_activity_quiz_settings">QuizSettingsActivity</string>
    <string name="title_activity_quiz_game">QuizGameActivity</string>
	<string name="help">Help Screen</string>
	<string name="splash">Splash Screen</string>
	<string name="settings">Settings Screen</string>
	<string name="game">Game Screen</string>
	<string name="scores">Scores Screen</string>
	<string name="app_logo_top">BEEN THERE</string>
	<string name="app_logo_bottom">DONE THAT!</string>
	<string name="app_version_info">Kikikot version</string>
	<string name="menu">MAIN MENU</string>
	
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_scores">View Scores</string>
	<string name="menu_item_help">Help</string>
	<string name="menu_item_play">Play Game</string>
	<string name="menu_item_reset_game">Reset Game</string>
    <string name="menu_item_exit">EXIT</string>

    <string name="all_scores">"All Scores"</string>
    <string name="friends_scores">"Scores of Friends"</string>
    <string name="no_scores">"No scores to show."</string>
    <string name="username">"Username"</string>
    <string name="rank">"Ranking"</string>
    <string name="score">"Score"</string>
    <string name="wait_msg">"Retrieving Scores..."</string>
    <string name="wait_title">"Loading..."</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_neutral">Prefer Not To Say</string>

    <string name="settings_nick">Nickname</string>
    <string name="settings_mail">E-mail</string>
    <string name="settings_pass">Password</string>
    <string name="settings_confirm_pass">Confirm password</string>
    <string name="settings_pass_set">Password is defined</string>
    <string name="settings_pass_not_set">Set the password</string>
    <string name="settings_birth">Date of Birth</string>
    <string name="settings_birth_not_set">Birth not set</string>
    <string name="settings_gender">Gender</string>
    <string name="settings_pass_OK">Passwords are OK</string>
    <string name="settings_pass_KO">Passwords does not match</string>
    <string name="no_questions">No more questions. Thanks!!</string>

</resources>
